03-k8s-manifests/overlays/dev/patches/delete-gateway-dev.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: external-http-gw
  namespace: prod-ns
$patch: delete
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: http-to-https-redirect
  namespace: prod-ns
$patch: delete
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: frontend-route
  namespace: prod-ns
$patch: delete
